--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,17 +8,192 @@
     <!-- css stylesheet -->
     <link rel="stylesheet" href="css/style.css">
     <title>The king of Banshkhali Convention Hall</title>
+    <!-- bootstrap css stylesheet -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <!-- font awesome -->
+    <script src="https://kit.fontawesome.com/e088b50334.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
     <!-- header and navigation -->
     <header>
-<h2>The king of Banshkhali. Convention hall.</h2>
+        <nav class="navbar navbar-expand-lg navbar-light fixed-top bg-light">
+            <div class="container-fluid">
+                <a class="navbar-brand hall" href="#">Banshkhali Convention center</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0 ">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">About Us</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Contact</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Subscribe</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        <!-- carousel slide -->
+        <div id="carouselExampleCaptions" class="carousel slide mb-4" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+                    aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                    aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                    aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="images/banner1.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block carousel-title">
+                        <h2>The perfect venue for your
+                            next event</h2>
+                        <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia
+                            consequat duis enim velit </p>
+                        <button class="carousel-btn">Book Now</button>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="images/banner2.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block carousel-title">
+                        <h2>The perfect venue for your
+                            next event</h2>
+                        <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia
+                            consequat duis enim velit </p>
+                        <button class="carousel-btn">Book Now</button>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="images/banner3.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block carousel-title">
+                        <h2>The perfect venue for your
+                            next event</h2>
+                        <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia
+                            consequat duis enim velit </p>
+                        <button class="carousel-btn">Book Now</button>
+                    </div>
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
     </header>
     <main>
-
+        <!-- bridge coming -->
+        <section class="container my-5">
+            <div class="row g-2">
+                <div class="col-lg-6">
+                    <img src="images/wedding.png" alt="">
+                </div>
+                <div class="col-lg-6 d-flex align-items-center">
+                    <div class="wedding-title">
+                        <h3>Every Moment is Precious</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam quaerat itaque, explicabo
+                            quia incidunt vitae! Nisi expedita nemo odit illo amet consectetur adipisicing elit. Aperiam
+                            quaerat itaque,!</p>
+                        <button>Explore Our Album <i class="fa-solid fa-arrow-right"></i></button>
+                    </div>
+                </div>
+            </div>
+        </section>
+<!-- our package -->
+<section class="container my-5">
+    <h2 class="text-center fw-bold mb-4">Our Package</h2>
+    <div class="row p-2">
+        <div class="col-3 ">
+           <div class="p-3  ">
+           <div class="package-part">
+            <h2 class="fw-bold">$300</h2>
+            <h4 class="fw-bold">Business fair</h4>
+            <p><small>For most businesses event 
+                like book fair, craft fair.</small></p>
+                <p><i class="fa-solid fa-square-check"></i><small>limited space access</small></p>
+                <p><i class="fa-solid fa-square-check"></i><small>Security facility</small></p>
+                <p><i class="fa-solid fa-square-check"></i><small>Event support</small></p>
+                <p><i class="fa-solid fa-square-check"></i><small>Decoration design</small></p>
+                <p><i class="fa-solid fa-square-check"></i><small>Per day bill</small></p>
+                <button class="package-button">Choose Plan</button>
+               </div>
+           </div>
+        </div>
+        <div class="col-3 ">
+            <div class="p-3 ">
+            <div class="package-part">
+             <h2 class="fw-bold">$500</h2>
+             <h4 class="fw-bold">wedding basic</h4>
+             <p><small>For most businesses event 
+                 like book fair, craft fair.</small></p>
+                 <p><i class="fa-solid fa-square-check"></i><small>limited space access</small></p>
+                 <p><i class="fa-solid fa-square-check"></i><small>Security facility</small></p>
+                 <p><i class="fa-solid fa-square-check"></i><small>Event support</small></p>
+                 <p><i class="fa-solid fa-square-check"></i><small>Decoration design</small></p>
+                 <p><i class="fa-solid fa-square-check"></i><small>Per day bill</small></p>
+                 <button class="package-button">Choose Plan</button>
+                </div>
+            </div>
+         </div>
+         <div class="col-3">
+            <div class="p-3">
+                <div class="package-part different-part">
+                    <h2 class="fw-bold">$800</h2>
+                    <h4 class="fw-bold">Wedding plus</h4>
+                    <p><small>For most businesses event 
+                        like book fair, craft fair.</small></p>
+                        <p><i class="fa-solid fa-square-check"></i><small>limited space access</small></p>
+                        <p><i class="fa-solid fa-square-check"></i><small>Security facility</small></p>
+                        <p><i class="fa-solid fa-square-check"></i><small>Event support</small></p>
+                        <p><i class="fa-solid fa-square-check"></i><small>Decoration design</small></p>
+                        <p><i class="fa-solid fa-square-check"></i><small>Per day bill</small></p>
+                        <button class="package-button">Choose Plan</button>
+                       </div>
+            </div>
+         </div>
+        <div class="col-3 ">
+            <div class="p-3  ">
+            <div class="package-part">
+             <h2 class="fw-bold">$1200</h2>
+             <h4 class="fw-bold">Corporate event</h4>
+             <p><small>For most businesses event 
+                 like book fair, craft fair.</small></p>
+                 <p><i class="fa-solid fa-square-check"></i><small>limited space access</small></p>
+                 <p><i class="fa-solid fa-square-check"></i><small>Security facility</small></p>
+                 <p><i class="fa-solid fa-square-check"></i><small>Event support</small></p>
+                 <p><i class="fa-solid fa-square-check"></i><small>Decoration design</small></p>
+                 <p><i class="fa-solid fa-square-check"></i><small>Per day bill</small></p>
+                 <button class="package-button">Choose Plan</button>
+                </div>
+            </div>
+         </div>
+    </div>
+</section>
     </main>
     <footer>
 
     </footer>
+    <!-- js stylesheet -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
