--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- css stylesheet -->
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/all.min.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/fontawesome.min.css">
     <title>The king of Banshkhali Convention Hall</title>
     <!-- bootstrap css stylesheet -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -116,84 +119,185 @@
                 </div>
             </div>
         </section>
-<!-- our package -->
-<section class="container my-5">
-    <h2 class="text-center fw-bold mb-4">Our Package</h2>
-    <div class="row p-2">
-        <div class="col-3 ">
-           <div class="p-3  ">
-           <div class="package-part">
-            <h2 class="fw-bold">$300</h2>
-            <h4 class="fw-bold">Business fair</h4>
-            <p><small>For most businesses event 
-                like book fair, craft fair.</small></p>
-                <p><i class="fa-solid fa-square-check"></i><small>limited space access</small></p>
-                <p><i class="fa-solid fa-square-check"></i><small>Security facility</small></p>
-                <p><i class="fa-solid fa-square-check"></i><small>Event support</small></p>
-                <p><i class="fa-solid fa-square-check"></i><small>Decoration design</small></p>
-                <p><i class="fa-solid fa-square-check"></i><small>Per day bill</small></p>
-                <button class="package-button">Choose Plan</button>
-               </div>
-           </div>
-        </div>
-        <div class="col-3 ">
-            <div class="p-3 ">
-            <div class="package-part">
-             <h2 class="fw-bold">$500</h2>
-             <h4 class="fw-bold">wedding basic</h4>
-             <p><small>For most businesses event 
-                 like book fair, craft fair.</small></p>
-                 <p><i class="fa-solid fa-square-check"></i><small>limited space access</small></p>
-                 <p><i class="fa-solid fa-square-check"></i><small>Security facility</small></p>
-                 <p><i class="fa-solid fa-square-check"></i><small>Event support</small></p>
-                 <p><i class="fa-solid fa-square-check"></i><small>Decoration design</small></p>
-                 <p><i class="fa-solid fa-square-check"></i><small>Per day bill</small></p>
-                 <button class="package-button">Choose Plan</button>
+        <!-- our package -->
+        <section class="container my-5">
+            <div class="row my-4">
+                <div class="package-title">Our Package</div>
+                <div class="col-lg-3 col-md-6 col-12">
+                    <div class="package-cart">
+                        <div type="button" class="position-relative">
+                            <span
+                                class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">Hot
+                            </span>
+                            <h2>$300</h2>
+                            <h4 class="fw-bold">Business fair</h4>
+                            <p><small>For most businesses event
+                                    like book fair, craft fair.</small></p>
+                            <p><i class="fa-solid fa-square-check"></i><small> limited space access</small></p>
+                            <p><i class="fa-solid fa-square-check"></i><small> Security facility</small></p>
+                            <p><i class="fa-solid fa-square-check"></i><small> Event support</small></p>
+                            <p><i class="fa-solid fa-square-check"></i><small> Decoration design</small></p>
+                            <p><i class="fa-solid fa-square-check"></i><small> Per day bill</small></p>
+                            <button class="package-button">Choose Plan</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 col-12">
+                    <div class="package-cart">
+                        <div type="button" class="position-relative">
+                            <span
+                                class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">Hot
+                            </span>
+                            <h2>$500</h2>
+                            <h4 class="fw-bold">wedding basic</h4>
+                            <p><small>For most businesses event
+                                    like book fair, craft fair.</small></p>
+                            <p><i class="fa-solid fa-square-check"></i><small> limited space access</small></p>
+                            <p><i class="fa-solid fa-square-check"></i><small> Security facility</small></p>
+                            <p><i class="fa-solid fa-square-check"></i><small> Event support</small></p>
+                            <p><i class="fa-solid fa-square-check"></i><small> Decoration design</small></p>
+                            <p><i class="fa-solid fa-square-check"></i><small> Per day bill</small></p>
+                            <button class="package-button">Choose Plan</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 col-12">
+                    <div class="package-cart">
+                        <div type="button" class="position-relative">
+                            <span
+                                class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">Hot
+                            </span>
+                            <h2>$800</h2>
+                            <h4 class="fw-bold">Wedding plus</h4>
+                            <p><small>For most businesses event
+                                    like book fair, craft fair.</small></p>
+                            <p><i class="fa-solid fa-square-check"></i><small> limited space access</small></p>
+                            <p><i class="fa-solid fa-square-check"></i><small> Security facility</small></p>
+                            <p><i class="fa-solid fa-square-check"></i><small> Event support</small></p>
+                            <p><i class="fa-solid fa-square-check"></i><small> Decoration design</small></p>
+                            <p><i class="fa-solid fa-square-check"></i><small> Per day bill</small></p>
+                            <button class="package-button">Choose Plan</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 col-12">
+                    <div class="package-cart">
+                        <div type="button" class="position-relative">
+                            <span
+                                class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">Hot
+                            </span>
+                            <h2>$1200</h2>
+                            <h4 class="fw-bold">Corporate event</h4>
+                            <p><small>For most businesses event
+                                    like book fair, craft fair.</small></p>
+                            <p><i class="fa-solid fa-square-check"></i><small> limited space access</small></p>
+                            <p><i class="fa-solid fa-square-check"></i><small> Security facility</small></p>
+                            <p><i class="fa-solid fa-square-check"></i><small> Event support</small></p>
+                            <p><i class="fa-solid fa-square-check"></i><small> Decoration design</small></p>
+                            <p><i class="fa-solid fa-square-check"></i><small> Per day bill</small></p>
+                            <button class="package-button">Choose Plan</button>
+                        </div>
+                    </div>
                 </div>
             </div>
-         </div>
-         <div class="col-3">
-            <div class="p-3">
-                <div class="package-part different-part">
-                    <h2 class="fw-bold">$800</h2>
-                    <h4 class="fw-bold">Wedding plus</h4>
-                    <p><small>For most businesses event 
-                        like book fair, craft fair.</small></p>
-                        <p><i class="fa-solid fa-square-check"></i><small>limited space access</small></p>
-                        <p><i class="fa-solid fa-square-check"></i><small>Security facility</small></p>
-                        <p><i class="fa-solid fa-square-check"></i><small>Event support</small></p>
-                        <p><i class="fa-solid fa-square-check"></i><small>Decoration design</small></p>
-                        <p><i class="fa-solid fa-square-check"></i><small>Per day bill</small></p>
-                        <button class="package-button">Choose Plan</button>
-                       </div>
-            </div>
-         </div>
-        <div class="col-3 ">
-            <div class="p-3  ">
-            <div class="package-part">
-             <h2 class="fw-bold">$1200</h2>
-             <h4 class="fw-bold">Corporate event</h4>
-             <p><small>For most businesses event 
-                 like book fair, craft fair.</small></p>
-                 <p><i class="fa-solid fa-square-check"></i><small>limited space access</small></p>
-                 <p><i class="fa-solid fa-square-check"></i><small>Security facility</small></p>
-                 <p><i class="fa-solid fa-square-check"></i><small>Event support</small></p>
-                 <p><i class="fa-solid fa-square-check"></i><small>Decoration design</small></p>
-                 <p><i class="fa-solid fa-square-check"></i><small>Per day bill</small></p>
-                 <button class="package-button">Choose Plan</button>
+        </section>
+        <!-- client section -->
+        <section class="container mb-5">
+            <div class="row g-2">
+                <div class="client-title">Happy Client Says</div>
+                <div class="col client-card column shadow-lg rounded-3">
+                    <p>Slate helps you see how many more days you need to work to reach your financial goal for the
+                        month and year.financial goal for .</p>
+                    <img src="images/person 1.png" alt="">
+                    <h4>Regina Miles <br> Banker</h4>
                 </div>
-            </div>
-         </div>
-    </div>
-</section>
-    </main>
-    <footer>
+                <div class="col client-card column shadow-lg rounded-3">
+                    <p>Slate helps you see how many more days you need to work to reach your financial goal for the
+                        month and year.financial goal for .</p>
+                    <img src="images/person 2.png" alt="">
+                    <h4>Cret Yater <br> Banker</h4>
+                </div>
+                <div class="col client-card column shadow-lg rounded-3">
+                    <p>Slate helps you see how many more days you need to work to reach your financial goal for the
+                        month and year.financial goal for .</p>
+                    <img src="images/person 3.png" alt="">
+                    <h4>Jone Drake <br> Banker</h4>
+                </div>
 
+            </div>
+        </section>
+        <!-- Frequently Asked Questions -->
+        <section class="container my-4">
+            <div class="client-title">Frequently Asked Questions</div>
+            <div class="row g-2">
+                <div class="col">
+                    <div>
+                        <select class="form-select" aria-label="Default select example">
+                            <option selected>What's the difference between event design and event planning? </option>
+                            <option value="1">Event design and event planning work hand in hand to deliver a successful
+                                event.Events by Knight offer tailor made events. This means we incorporate both event
+                                design and event planning to create that perfect event.</option>
+
+                        </select>
+                        <br>
+                        <select class="form-select" aria-label="Default select example">
+                            <option selected>How early do we need to start planning an event</option>
+                            <option value="1">Event design and event planning work hand in hand to deliver a successful
+                                event.Events by Knight offer tailor made events. This means we incorporate both event
+                                design and event planning to create that perfect event.</option>
+
+                        </select>
+                        <br>
+                        <select class="form-select" aria-label="Default select example">
+                            <option selected>What is your refund and cancellation policy? </option>
+                            <option value="1">Event design and event planning work hand in hand to deliver a successful
+                                event.Events by Knight offer tailor made events. This means we incorporate both event
+                                design and event planning to create that perfect event.</option>
+
+                        </select>
+                        <br>
+                        <select class="form-select" aria-label="Default select example">
+                            <option selected>How do you keep budgets on track? </option>
+                            <option value="1">Event design and event planning work hand in hand to deliver a successful
+                                event.Events by Knight offer tailor made events. This means we incorporate both event
+                                design and event planning to create that perfect event.</option>
+
+                        </select>
+                    </div>
+                </div>
+                <div class="col">
+                    <div>
+                        <img src="images/people.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+    <!-- footer section -->
+    <footer class="bg-footer">
+        <div class="row">
+            <div class="col">
+                <p class="footer">© 2020 bike. All rights reserved</p>
+            </div>
+            <div class="col apple-btn">
+                <div class="link">
+                    <p><button><a target="_blank" href="https://www.apple.com/store"><i class="fa-brands fa-apple"></i>
+                                App Store</a></button></p>
+                    <br>
+                    <button> <a target="_blank" href="https://play.google.com/store"> <i
+                                class="fa-brands fa-google-play"></i> Google Play</a></button>
+                </div>
+                <div class="link">
+
+                </div>
+            </div>
+        </div>
     </footer>
     <!-- js stylesheet -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
+    <script src="js/bootstrap.min.js"></script>
 </body>
 
 </html>
