added a footer button

--- a/index.html
+++ b/index.html
@@ -275,20 +275,15 @@
     </main>
     <!-- footer section -->
     <footer class="bg-footer">
-        <div class="row">
+        <div class="row g-2">
             <div class="col">
                 <p class="footer">© 2020 bike. All rights reserved</p>
             </div>
-            <div class="col apple-btn">
-                <div class="link">
-                    <p><button><a target="_blank" href="https://www.apple.com/store"><i class="fa-brands fa-apple"></i>
-                                App Store</a></button></p>
+            <div class="col">
+                <div class="footer-btn">
+                    <p><button><a target="_blank" href="https://www.apple.com/store"><i class="fa-brands fa-apple"></i> App Store</a></button></p>
                     <br>
-                    <button> <a target="_blank" href="https://play.google.com/store"> <i
-                                class="fa-brands fa-google-play"></i> Google Play</a></button>
-                </div>
-                <div class="link">
-
+                    <button> <a target="_blank" href="https://play.google.com/store"><i class="fa-brands fa-google-play"></i> Google Play</a></button>
                 </div>
             </div>
         </div>
